Replaces a $collection.getFirst() call with .get(0)
This fixes a compilation error.